Add service upload file
